fix(docs): item type update route
