# src/docs/swagger.yaml
@@ -388,6 +388,23 @@ definitions:
         minimum: 0
         type: integer
     type: object
+  pocketeer_internal_app_services.ProjectCreateFromTemplateRequest:
+    properties:
+      description:
+        maxLength: 512
+        type: string
+      name:
+        maxLength: 256
+        minLength: 1
+        type: string
+      planned_deadline:
+        type: string
+      template_id:
+        type: integer
+    required:
+    - name
+    - template_id
+    type: object
   pocketeer_internal_app_services.ProjectCreateRequest:
     properties:
       description:
@@ -698,8 +715,6 @@ definitions:
     - 1000000000
     - 60000000000
     - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
     - 1
     - 1000
     - 1000000
@@ -717,8 +732,6 @@ definitions:
     - Second
     - Minute
     - Hour
-    - minDuration
-    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
@@ -838,6 +851,32 @@ paths:
       - auth
   /item-types:
     get:
+      consumes:
+      - application/json
+      description: Get a list of all item types belonging to the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/pocketeer_internal_app_services.ItemType'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: List all item types
+      tags:
+      - item-types
+    patch:
       consumes:
       - application/json
       description: Get a list of all item types belonging to the authenticated user
@@ -1803,6 +1842,43 @@ paths:
       security:
       - BearerAuth: []
       summary: Start project
+      tags:
+      - projects
+  /projects/from-template:
+    post:
+      consumes:
+      - application/json
+      description: Create a new project in 'Planning' state, copying planned metrics
+        and resources from a template
+      parameters:
+      - description: Project Create from Template Request
+        in: body
+        name: template
+        required: true
+        schema:
+          $ref: '#/definitions/pocketeer_internal_app_services.ProjectCreateFromTemplateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pocketeer_internal_app_services.ProjectFull'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Create new project from template
       tags:
       - projects
   /tags:
